fixing itens align, change slogan position

--- a/src/app/components/ServiceCard.module.scss
+++ b/src/app/components/ServiceCard.module.scss
@@ -7,6 +7,7 @@
   background-color: white;
   transition: transform 0.3s ease;
   height: 400px;
+  width: 80%;
 
   &:hover {
     transform: translateY(-4px);
