--- a/src/scss/sections/_services2.scss
+++ b/src/scss/sections/_services2.scss
@@ -4,7 +4,6 @@
     padding: 3rem 2rem;
     border-radius: 8px;
     text-align: center;
-    width: 100vw;
   
     h2 {
       font-size: 1.8rem;
